--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
   <title>FacebookShare</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
+  <meta property="og:type"               content="article" />
+  <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
+  <meta property="og:description"        content="How much does culture influence creative thinking?" />
+  <meta property="og:image"              content="https://media.slidesgo.com/storage/39807305/tarot-style-slides-for-middle-school1693218425.jpg" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
